Add /health endpoint for Render health checks

--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     env: docker
     plan: free
     dockerfilePath: ./Dockerfile
-    healthCheckPath: /
+    healthCheckPath: /health
     envVars:
       - key: APP_ENV
         value: production
