--- a/render.yaml
+++ b/render.yaml
@@ -16,6 +16,8 @@ services:
         value: production
       - key: APP_DEBUG
         value: false
+      - key: APP_KEY
+        sync: false
       - key: APP_URL
         value: https://confidence-club-members-app.onrender.com
       - key: LOG_CHANNEL
@@ -24,6 +26,18 @@ services:
         value: pgsql
       - key: RECEIPTS_DISK
         value: s3
+      - key: AWS_ACCESS_KEY_ID
+        sync: false
+      - key: AWS_SECRET_ACCESS_KEY
+        sync: false
+      - key: AWS_DEFAULT_REGION
+        sync: false
+      - key: AWS_BUCKET
+        sync: false
+      - key: AWS_URL
+        sync: false
+      - key: AWS_ENDPOINT
+        sync: false
       - key: SESSION_SECURE_COOKIE
         value: true
       - key: DB_HOST
